--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,4 @@
-.main {
+/*.main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -106,8 +106,8 @@
 
 .logo {
   position: relative;
-}
-/* Enable hover only on non-touch devices */
+}*/
+/* Enable hover only on non-touch devices
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
     background: rgba(var(--card-rgb), 0.1);
@@ -123,9 +123,9 @@
   .card:hover span {
     transform: none;
   }
-}
+} */
 
-/* Mobile */
+/* Mobile
 @media (max-width: 700px) {
   .content {
     padding: 4rem;
@@ -200,9 +200,9 @@
     );
     z-index: 1;
   }
-}
+} */
 
-/* Tablet and Smaller Desktop */
+/* Tablet and Smaller Desktop
 @media (min-width: 701px) and (max-width: 1120px) {
   .grid {
     grid-template-columns: repeat(2, 50%);
@@ -226,4 +226,4 @@
   to {
     transform: rotate(0deg);
   }
-}
+} */
